# linear-recurrent-unit-experiments

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scratchpad/: micro.py  train.py  train_example.py
src/: asr.py  asr_profiler.py  asr_trainer.py  bpe_asr.py  fast.py  optimizer.py  prepare_data.py  rnn.py
