[tool.poetry]
name = "micro-speech"
version = "0.1.0"
description = ""
authors = ["Pierce Stegman <pwstegman@users.noreply.github.com>", "Nicholas Cioli <nicholascioli@users.noreply.github.com>"]
license = "Unlicensed"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jax = {extras = ["cuda12"], version = "~0.4.33"}
flax = "^0.10.0"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
treescope = "^0.1.5"
tqdm = "^4.66.5"
notebook = "^7.2.2"
jaxtyping = "^0.2.34"
levenshtein = "^0.26.0"
jax-dataloader = "^0.1.3"
numba = "^0.60.0"
datasets = {extras = ["audio"], version = "^3.0.1"}
ipywidgets = "^8.1.5"
tiktoken = "^0.8.0"
aim = "^3.25.0"
orbax-checkpoint = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
